--- a/aloha/src/main/resources/application.properties
+++ b/aloha/src/main/resources/application.properties
@@ -1,6 +1,6 @@
  
  #Acceso a Database
- spring.datasource.url = jdbc:mysql://127.0.0.1:3306/alohatest2?useSSL=false&serverTimezone=UTC&
+ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/alohatest?useSSL=false&serverTimezone=UTC&
 
 # Username and password
 spring.datasource.username = root
